--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -1,11 +1,26 @@
+:root{
+    --prime: #cdffcd;
+    --second: #ffc2e4;
+    --third: #ffc68e;
+    --fourth: #d6a4ff;
+    --fifth: #ff7878;
+    --sixth: white;
+}
+.navbar {
+    width: 100%;
+    height: 400px;
+
+}
 .nav-options{
     flex-direction: row;
 }
 .links {
     width: 20%;
     font-size: 20px;
+    display: flex;
+    text-align: center;
+    text-decoration: none;
 }
-.navbar {
-    width: 100%;
-    height: 400px;
+.link{
+    text-decoration: none;
 }
