--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -1,26 +1,38 @@
 :root{
-    --prime: #cdffcd;
+    --prime: #d9f8d9;
     --second: #ffc2e4;
-    --third: #ffc68e;
+    --second-clear: rgba(255, 194, 228, 0.38);
+    --third: #fdb572;
     --fourth: #d6a4ff;
     --fifth: #ff7878;
     --sixth: white;
 }
 .navbar {
     width: 100%;
-    height: 400px;
-
+    height: 90px;
+    background-image: linear-gradient(to bottom, var(--sixth),var(--prime),var(--sixth));
+    color: var(--third);
 }
 .nav-options{
     flex-direction: row;
 }
 .links {
     width: 20%;
-    font-size: 20px;
+    font-size: 16px;
     display: flex;
     text-align: center;
     text-decoration: none;
+    color: var(--third);
+}
+.link:visited{
+    color: var(--third);
+}
+.link:hover{
+    color: var(--fourth);
 }
 .link{
     text-decoration: none;
+}
+body {
+
 }
