--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -1,38 +1,87 @@
-:root{
-    --prime: #d9f8d9;
-    --second: #ffc2e4;
-    --second-clear: rgba(255, 194, 228, 0.38);
-    --third: #fdb572;
-    --fourth: #d6a4ff;
-    --fifth: #ff7878;
-    --sixth: white;
+:root {
+    --first: #FFC62F;
+    --second: #FFCD49;
+    --third: #FFDD84;
+    --fourth: #FFE9B0;
+    --fifth: #FFFBF2;
+    --sixth: #FFFCF3;
+    --accent: #FF6962;
 }
-.navbar {
-    width: 100%;
-    height: 90px;
-    background-image: linear-gradient(to bottom, var(--sixth),var(--prime),var(--sixth));
-    color: var(--third);
-}
-.nav-options{
-    flex-direction: row;
-}
-.links {
-    width: 20%;
-    font-size: 16px;
-    display: flex;
-    text-align: center;
-    text-decoration: none;
-    color: var(--third);
-}
-.link:visited{
-    color: var(--third);
-}
-.link:hover{
-    color: var(--fourth);
-}
-.link{
-    text-decoration: none;
-}
-body {
 
+.page-wrapper {
+    background-image: linear-gradient(var(--fifth), var(--fourth), var(--third), var(--second), var(--first));
+}
+
+header .navbar {
+    background-color: var(--sixth);
+}
+
+h1 {
+    font-size: 1.5rem;
+}
+
+
+h2 {
+    font-size: 1.2rem;
+}
+
+h3 {
+    font-size: 1.0rem;
+}
+
+.no-mb {
+    margin-bottom: unset;
+}
+
+.nav-item {
+    margin: 2.0rem;
+}
+
+h1, h2, h3 {
+    color: var(--accent);
+}
+
+a {
+    text-decoration: none;
+}
+
+.intro {
+    margin: 0.25rem;
+}
+
+.bubble-wrapper {
+    display: flex;
+}
+
+.bubble {
+    position: relative;
+    width: 120px;
+    height: 150px;
+    transition: all 0.5s ease;
+}
+
+.bubble:before {
+    display: block;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    content: ' ';
+    transition: all 0.5s ease;
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.bubble.blue:before {
+    background-color: blue;
+}
+
+
+.bubble:hover {
+    width: calc(40px * 2.0);
+}
+
+.bubble:hover:before {
+    transform: translateX(-50%) scale(2.0);
 }
